// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-GKYOR Button__ButtonInner-dXfNcJ jBYhZD iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-GKYOR Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ kWkXyx dpibyo AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalConfirmationDomainDelete /> <TestModalConfirmationDomainDelete /> should render modal open 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-describedby="id-2"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-GKYOR Button__ButtonInner-dXfNcJ jBYhZD iWxcUO ButtonQuickAction___StyledButton-fmafsA etoUvh"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
    <IconMock
      className="sc-GKYOR Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ kWkXyx dpibyo AjyOr icon"
    />
  </button>,
  <div
    className="cap-tooltip"
    hidden={true}
    id="id-2"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1100,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      data-testid="AnimatePresence"
    >
      <div
        className="sc-GKYOR ljXjxI Modal__ModalContainerInner-gRvBLO"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="sc-GKYOR bSNbIp Modal__ModalInner-fNGFsd"
          style={
            Object {
              "opacity": 0,
              "transform": "translateY(-20px) translateZ(0)",
            }
          }
        >
          <div
            className="sc-GKYOR Flex___StyledAppBox-SiGEY gCA-DSO"
          >
            <div
              className="sc-GKYOR Flex___StyledAppBox-SiGEY gLrGJh ModalHeader___StyledFlex-hKIJSk YmlkP"
            >
              <h2
                className="sc-GKYOR fCiPby"
              >
                delete-confirmation
              </h2>
            </div>
            <button
              className="sc-GKYOR Button__ButtonInner-dXfNcJ eGMGUY iWxcUO"
              onClick={[Function]}
              type="button"
            >
              <IconMock
                className="sc-GKYOR Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ ghyYHL dpibyo AjyOr icon"
              />
            </button>
          </div>
          <main
            className="sc-GKYOR Flex___StyledAppBox-SiGEY gAmygc"
            role="main"
          >
            <p
              className="sc-GKYOR Xa-dFm"
            >
              are-you-sure-to-delete-something
            </p>
          </main>
          <footer
            className="sc-GKYOR Flex___StyledAppBox-SiGEY iTSnNw frpAOM"
          >
            <div
              className="sc-GKYOR Flex___StyledAppBox-SiGEY cALyhS crLbTm"
            >
              <button
                className="sc-GKYOR Button__ButtonInner-dXfNcJ ckCtUc lilFYw"
                onClick={[Function]}
                type="button"
              >
                cancel
              </button>
              <button
                className="sc-GKYOR Button__ButtonInner-dXfNcJ ckCtUc fjccAb"
                onClick={[Function]}
                type="button"
              >
                global.delete
              </button>
            </div>
          </footer>
        </div>
      </div>
    </div>
  </div>,
]
`;
